update min java to 21